refactored files to Java 11