@@ -44,11 +44,10 @@ public class PSFormDao extends HibernateDaoSupport implements IPSFormDao
      * (non-Javadoc)
      * @see com.percussion.delivery.forms.IPSFormDao#createFormData(java.lang.String, java.util.Map)
      */
-    public IPSFormData createFormData(String formname, Map<String, String[]> formdata)
-    {
-        if(StringUtils.isBlank(formname))
-            throw new IllegalArgumentException("formname cannnot be blank.");
-        if(formdata == null)
+    public IPSFormData createFormData(String formname, Map<String, String[]> formdata) {
+        if (formname == null || formname.isBlank())
+            throw new IllegalArgumentException("formname cannot be blank.");
+        if (formdata == null)
             throw new IllegalArgumentException("formdata cannot be null");
         return new PSFormData(formname, formdata);
     }
@@ -56,102 +55,78 @@ public class PSFormDao extends HibernateDaoSupport implements IPSFormDao
     /* (non-Javadoc)
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#save(com.percussion.delivery.forms.data.IPSFormData)
      */
-    public void save(IPSFormData form)
-    {
-        if (form == null)
-        {
-            throw new IllegalArgumentException("clist may not be null");
+    public void save(IPSFormData form) {
+        if (form == null) {
+            throw new IllegalArgumentException("form may not be null");
         }
-
         getHibernateTemplate().saveOrUpdate(form);
     }
 
     /* (non-Javadoc)
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#delete(com.percussion.delivery.forms.data.IPSFormData)
      */
-    public void delete(IPSFormData form)
-    {
+    public void delete(IPSFormData form) {
         getHibernateTemplate().delete(form);
     }
 
     /* (non-Javadoc)
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#getExportedFormCount(java.lang.String)
      */
-    public long getExportedFormCount(String name)
-    {
-        String query = "select count(*) from PSFormData formData where formData.isExported = 'y'";
-        if (name != null && name.trim().length() > 0)
-            query += " and lower(formData.name) = lower('" + name + "')";
-        return ((Long) getHibernateTemplate().find(query).iterator().next())
-                .intValue();
+    public long getExportedFormCount(String name) {
+        var query = new StringBuilder("select count(*) from PSFormData formData where formData.isExported = 'y'");
+        if (name != null && !name.isBlank())
+            query.append(" and lower(formData.name) = lower('" + name + "')");
+        return ((Long) getHibernateTemplate().find(query.toString()).iterator().next()).intValue();
     }
 
     /* (non-Javadoc)
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#getTotalFormCount(java.lang.String)
      */
-    public long getTotalFormCount(String name)
-    {
-        String query = "select count(*) from PSFormData formData";
-        if (name != null && name.trim().length() > 0)
-            query += " where lower(formData.name) = lower('" + name + "')";
-        return ((Long) getHibernateTemplate().find(query).iterator().next())
-                .intValue();
+    public long getTotalFormCount(String name) {
+        var query = new StringBuilder("select count(*) from PSFormData formData");
+        if (name != null && !name.isBlank())
+            query.append(" where lower(formData.name) = lower('" + name + "')");
+        return ((Long) getHibernateTemplate().find(query.toString()).iterator().next()).intValue();
     }
 
     // rather than saving all the forms, we just change the exported property
     /* (non-Javadoc)
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#markAsExported(java.util.Collection)
      */
-    public void markAsExported(Collection<IPSFormData> forms)
-    {
-        Session session = getSession();
-        try
-        {
-            // because of limitations in JDBC/hibernate, we have to keep IN
-            // clauses less than 1k elements
-            String query = "update PSFormData set isExported = 'y' where id in (:ids)";
-            Collection<Long> values = new ArrayList<>();
-            for (IPSFormData form : forms)
-            {
+    public void markAsExported(Collection<IPSFormData> forms) {
+        var session = getSession();
+        try {
+            var query = "update PSFormData set isExported = 'y' where id in (:ids)";
+            var values = new ArrayList<Long>();
+            for (var form : forms) {
                 values.add(Long.valueOf(form.getId()));
-                if (values.size() > 950 || values.size() == forms.size())
-                {
-                    session.createQuery(query).setParameterList("ids", values)
-                            .executeUpdate();
+                if (values.size() > 950 || values.size() == forms.size()) {
+                    session.createQuery(query).setParameterList("ids", values).executeUpdate();
                     session.flush();
                     values.clear();
                 }
             }
-        }
-        finally
-        {
-           // releaseSession(session);
+        } finally {
+            // releaseSession(session);
         }
     }
 
     /* (non-Javadoc)
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#deleteExportedForms(java.lang.String)
      */
-    public void deleteExportedForms(String formName)
-    {
-        List<IPSFormData> forms = findExportedForms(formName);
+    public void deleteExportedForms(String formName) {
+        var forms = findExportedForms(formName);
         if (!forms.isEmpty())
             getHibernateTemplate().deleteAll(forms);
-
     }
 
     @SuppressWarnings("unchecked")
-    private List<IPSFormData> findExportedForms(String formName)
-    {
-        String sqlString = "";
-        if (StringUtils.isEmpty(formName))
-        {
+    private List<IPSFormData> findExportedForms(String formName) {
+        String sqlString;
+        if (formName == null || formName.isBlank()) {
             sqlString = "from PSFormData where isExported = 'y' order by name asc, created asc";
-        }
-        else
-        {
-            sqlString = "from PSFormData formData where formData.isExported = 'y' and lower(formData.name) = "
-                    + "lower('" + formName + "')";
+        } else {
+            sqlString = "from PSFormData formData where formData.isExported = 'y' and lower(formData.name) = lower('" + formName + "')";
         }
         return (List<IPSFormData>) getHibernateTemplate().find(sqlString);
     }
@@ -160,14 +135,11 @@ public class PSFormDao extends HibernateDaoSupport implements IPSFormDao
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#findFormsByName(java.lang.String)
      */
     @SuppressWarnings("unchecked")
-    public List<IPSFormData> findFormsByName(String name)
-    {
+    public List<IPSFormData> findFormsByName(String name) {
         Validate.notNull(name);
 
         return (List<IPSFormData>) getHibernateTemplate().findByNamedParam(
-                "from PSFormData formData " +
-                        "where lower(formData.name) = lower(:name) " +
-                        "order by created asc ",
+                "from PSFormData formData where lower(formData.name) = lower(:name) order by created asc ",
                 "name", name);
     }
 
@@ -175,8 +147,7 @@ public class PSFormDao extends HibernateDaoSupport implements IPSFormDao
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#findAllForms()
      */
     @SuppressWarnings("unchecked")
-    public List<IPSFormData> findAllForms()
-    {
+    public List<IPSFormData> findAllForms() {
         return (List<IPSFormData>) getHibernateTemplate().find(
                 "from PSFormData order by name asc, created asc");
     }
@@ -185,26 +156,17 @@ public class PSFormDao extends HibernateDaoSupport implements IPSFormDao
      * @see com.percussion.delivery.forms.impl.rdbms.IPSFormDao#findDistinctFormNames()
      */
     @SuppressWarnings("unchecked")
-    public List<String> findDistinctFormNames()
-    {
-        List<String> lowerNames = new ArrayList<>();
-        List<String> distinctNames = (List<String>) getHibernateTemplate().find(
+    public List<String> findDistinctFormNames() {
+        var lowerNames = new ArrayList<String>();
+        var distinctNames = (List<String>) getHibernateTemplate().find(
                 "select distinct name from PSFormData order by name asc");
-        Iterator<String> iter = distinctNames.iterator();
-        while (iter.hasNext())
-        {
-            String name = iter.next().toLowerCase();
-            if (!lowerNames.contains(name))
-            {
-                lowerNames.add(name);
-            }
-            else
-            {
-                iter.remove();
+        for (var name : distinctNames) {
+            var lower = name.toLowerCase();
+            if (!lowerNames.contains(lower)) {
+                lowerNames.add(lower);
             }
         }
-
-        return distinctNames;
+        return lowerNames;
     }
 
     private Session getSession(){
